--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#A06FA9</color>
     <color name="light">#88847287</color>
+    <color name="prof">#FCD6C8D9</color>
+
 </resources>
