--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,21 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:background="@color/light">
-
+    android:background="@color/cream">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:layout_margin="15dp"
-        android:background="@color/pink">
+       >
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/Head_login"
-            android:layout_marginTop="30dp"
-            android:text="Enter your login information"
+            android:layout_marginTop="20dp"
+            android:textSize="40dp"
+            android:text="Enter your login information."
+            android:textStyle=""
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
@@ -94,7 +95,13 @@
             android:layout_marginLeft="90dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="90dp"
-            android:text="Login" />
+            android:text="Login"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            />
+
+
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
