--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,51 +5,65 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pink"
+    android:background="@color/cream"
     tools:context=".MainActivity">
 
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_margin="15dp"
-       android:padding="15dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:gravity="center">
 
-       <ImageView
-           android:id="@+id/image_logo"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="30dp"
-           app:srcCompat="@drawable/logo"
-           android:maxWidth="180dp"
-           android:adjustViewBounds="true"
-           android:layout_centerHorizontal="true" />
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:id="@+id/main_name"
-           android:layout_marginTop="30dp"
-           android:text="Welcome to this app"
-           android:textAlignment="center"
-           android:layout_below="@+id/image_logo"
-           android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
+        <!-- Logo Image -->
+        <ImageView
+            android:id="@+id/image_logo"
+            android:layout_width="300dp"
+            android:layout_height="210dp"
+            app:srcCompat="@drawable/logo"
+            android:layout_marginTop="40dp"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center" />
 
-       <Button
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:id="@+id/button_Login"
-           android:layout_marginTop="100dp"
-           android:text="Login"
-           android:layout_below="@+id/main_name"
-           android:layout_marginLeft="70dp"
-           android:layout_marginRight="70dp"/>
-       <Button
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:id="@+id/button_Register"
-           android:text="Register"
-           android:layout_below="@+id/button_Login"
-           android:layout_marginLeft="70dp"
-           android:layout_marginRight="70dp"/>
+        <!-- Welcome Text -->
+        <TextView
+            android:id="@+id/main_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MGGlasses"
+            android:textAlignment="center"
+            android:textSize="40sp"
+            android:textColor="@color/lbu"
+            android:layout_marginTop="15dp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
 
-   </RelativeLayout>
+        <!-- Login Button -->
+        <Button
+            android:id="@+id/button_Login"
+            android:layout_width="210dp"
+            android:layout_height="50dp"
+            android:text="Login"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:layout_marginTop="80dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:backgroundTint="@color/black"
+             />
+
+        <!-- Register Button -->
+        <Button
+            android:id="@+id/button_Register"
+            android:layout_width="210dp"
+            android:layout_height="50dp"
+            android:text="Register"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:backgroundTint="@color/black" />
+
+    </LinearLayout>
 </ScrollView>
