--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,100 +4,122 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@color/white">
+    android:padding="20dp"
+    android:background="@color/marm">
 
-
-
+    <!-- Title Text -->
     <TextView
         android:id="@+id/Text"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Write your perimeters)))"
-        android:textSize="40sp"
-        android:textColor="@color/pink"
-        android:layout_marginBottom="24dp"/>
+        android:text="Write your perimeters"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        android:textColor="@color/pulink"
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="center"/>
+
+    <!-- First Question -->
     <TextView
         android:id="@+id/questionText_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1. Write your perimeters)))"
-        android:textSize="25sp"
-        android:textColor="@color/black"
-        android:layout_marginBottom="10dp"/>
+        android:text="Do you have any visual impairment?"
+        android:textSize="23sp"
+        android:textColor="@color/putik"
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="center"/>
 
-
+    <!-- RadioGroup with options -->
     <RadioGroup
         android:id="@+id/optionsGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp">
 
         <RadioButton
             android:id="@+id/option1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Farsighted(+)"
-            android:textSize="20sp"
+            android:text="Farsighted (+)"
+            android:textSize="18sp"
             android:padding="10dp"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:buttonTint="@color/purple" />
 
         <RadioButton
             android:id="@+id/option2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Short sighted(-)"
-            android:textSize="20sp"
+            android:text="Short-sighted (-)"
+            android:textSize="18sp"
             android:padding="10dp"
-            android:textColor="@color/black" />
-
-
+            android:textColor="@color/black"
+            android:buttonTint="@color/purple" />
     </RadioGroup>
+
+    <!-- Second Question -->
     <TextView
         android:id="@+id/questionText_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2. Write deferance)))"
-        android:layout_marginTop="20dp"
+        android:text="Please enter the difference."
         android:textSize="25sp"
-        android:textColor="@color/black"
-        android:layout_marginBottom="10dp"/>
+        android:textColor="@color/putik"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"
+      />
 
+    <!-- EditText for Numeric Input -->
     <EditText
         android:id="@+id/numberInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:hint="Enter it..."
-        android:layout_marginTop="16dp"
-        android:maxLength="20"
-        android:textSize="25sp"/>
+        android:inputType="numberDecimal"
+        android:hint="Enter the difference"
+        android:textColorHint="@color/light"
+        android:textColor="@color/black"
+        android:maxLength="10"
+        android:textSize="20sp"
+        android:padding="12dp"
+        android:layout_marginBottom="20dp" />
 
-
+    <!-- Submit Button -->
     <Button
         android:id="@+id/submit_button"
-        android:layout_width="214dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="24dp"
-        android:text="Submit" />
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/pulink"
+        android:text="Go to Camera"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:layout_gravity="center"/>
 
+    <!-- Result Text (Initially hidden) -->
     <TextView
         android:id="@+id/resultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Thank you for your answer!"
         android:textSize="16sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="16dp"
-        android:visibility="gone"/>
+        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
 
+    <!-- Image of Glasses (or any other image you prefer) -->
     <ImageView
+        android:layout_width="403dp"
+        android:layout_height="230dp"
         android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="197dp"
-        app:srcCompat="@drawable/glasses" />
-
+        app:srcCompat="@drawable/glasses"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
